adds overlay and text to hover on projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,17 +6,33 @@ permalink: /portfolio/
 <section class="section-about">
   <div class="about-row">
     <div class="project">
-      <a href="https://wdi-recipe-box.herokuapp.com/">
+      <div class="image_wrapper">
         <img src="/images/recipeB.png" alt="Recipe Box Project" />
-      </a>
+        <a href="https://wdi-recipe-box.herokuapp.com/">
+          <div class="project_overlay">
+            <h3>Ruby on Rails</h3>
+            <p>
+              First Rails app built during my time at General Assembly.  Displays basic rails knowledge.  I have built many since, unfortunely they are all privately hosted.
+            </p>
+          </div>
+        </a>
+      </div>
       <a href="https://github.com/Ryan-321/recipe_box">
         <p>Github Repo</p>
       </a>
     </div>
     <div class="project">
-      <a href="http://ryan-321.github.io/Memory/">
+      <div class="image_wrapper">
         <img src="/images/concentration.png" alt="Memory Project">
-      </a>
+        <a href="http://ryan-321.github.io/Memory/">
+          <div class="project_overlay">
+            <h3>Javascript</h3>
+            <p>
+              General Assembly Project.  Displays vanilla javascript, jquery and DOM skills.
+            </p>
+          </div>
+        </a>
+      </div>
       <a href="https://github.com/Ryan-321/Memory">
         <p>Github Repo</p>
       </a>
@@ -24,17 +40,33 @@ permalink: /portfolio/
   </div>
   <div class='about-row'>
     <div class="project">
-      <a href="http://peaceful-stream-87480.herokuapp.com">
+      <div class="image_wrapper">
         <img src="/images/api.png" alt="Weather API Website" />
-      </a>
+        <a href="http://peaceful-stream-87480.herokuapp.com">
+          <div class="project_overlay">
+            <h3>React</h3>
+            <p>
+              Version 1.0 from a React class I took.  Uses react, react-router, axios, webpack, babel, eslint and standard.  The UI is not my own, but all the react code is.
+            </p>
+          </div>
+        </a>
+      </div>
       <a href="https://github.com/Ryan-321/weatherAPI">
         <p>Github Repo</p>
       </a>
     </div>
     <div class="project">
-      <a href="http://lemoncellobtq.com/">
+      <div class="image_wrapper">
         <img src="/images/lemoncello.png" alt="Lemoncello Website" />
-      </a>
+        <a href="http://lemoncellobtq.com/">
+          <div class="project_overlay">
+            <h3>Wordpress</h3>
+            <p>
+              A live site that I am currently updating.  Built a child theme to go along with the Divi parent theme.
+            </p>
+          </div>
+        </a>
+      </div>
       <p>Wordpress Site</p>
     </div>
   </div>
