--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@ permalink: /resume/
         <h3>Management &amp; Deployment:</h3>
         <aside>
           <p>
-            Git, GitHub, Heroku, Wordpress, Jekyll, CLI
+            Git, GitHub, Heroku, Wordpress, CLI
           </p>
         </aside>
       </li>
@@ -131,6 +131,6 @@ permalink: /resume/
     </ul>
   </div>
   <h2>INTERESTS:</h2>
-  <p>Chess, Reading, Writing, Architecture, Sports, Photography, Gardening and amateur handyman</p>
+  <p>Chess, Reading, Writing, Cooking, Sports, Gardening and amateur handyman</p>
 
 </div>
