--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@ permalink: /about/
       and asking myself what I really wanted.  My answers: to learn a craft, build things(!), work with passionate people, give back and be creative. This site contains some of my past projects and experiences with technology.
     </p>
     <p>
-      I am a trained full-stack developer via General Assembly's Web Development Immersive course and have been honing my craft at my current job, which is in a Ruby on Rails and MySql environment.  My current side project is learning react, its tools and how and when to implement it. If you would like to learn more about I how can contribute to your team, please reach out to my e-mail below.
+      I am a trained full-stack developer via General Assembly's Web Development Immersive course and have been honing my craft at my current job, which is in a Ruby on Rails and MySql environment.  My current side project is learning react, its tools and how and when to implement it. If you would like to learn more about how I can contribute to your team, please reach out to my e-mail below.
     </p>
   </div>
 </div>
