corrects misspelled word

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@ permalink: /portfolio/
           <div class="project_overlay">
             <h3>Ruby on Rails</h3>
             <p>
-              First Rails app built during my time at General Assembly.  Displays basic rails knowledge.  I have built many since, unfortunely they are all privately hosted.
+              First Rails app built during my time at General Assembly.  Displays basic rails knowledge.  I have built more since, unfortunately they are all privately hosted.
             </p>
           </div>
         </a>
