adds transition to landing link and nav links:

--- a/about.html
+++ b/about.html
@@ -16,12 +16,12 @@ permalink: /about/
       <li>Father</li>
       <li>Husband</li>
       <li>Creative</li>
-      <li>Dog Lover</li>
-      <li>Planner</li>
-      <li>Independent</li>
-      <li>Adventurer</li>
       <li>Wine Guy</li>
-      <li>Team Player</li>
+      <li>Strategic</li>
+      <li>Traveler</li>
+      <li>Dog Lover</li>
+      <li>Receptive</li>
+      <li>Curious</li>
     </ul>
   </div>
   <div class="about-main-right">
