--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ layout: landing
       <h1 class="animate enter_left">< J. Ryan Kahle /></h1>
 
       <h3 class="animate enter_right">Web Developer</h3>
-      <a href="about" class="learn_more">Learn More</a>
+      <span class="animate enter_bottom">
+        <a href="about" class="learn_more">Learn More</a>
+      </span>
     </div>
   </div>
 </div>
