corrects links color on portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@ permalink: /portfolio/
         </a>
       </div>
       <a href="https://github.com/Ryan-321/recipe_box">
-        <p>Github Repo</p>
+        Github Repo
       </a>
     </div>
     <div class="project">
@@ -34,7 +34,7 @@ permalink: /portfolio/
         </a>
       </div>
       <a href="https://github.com/Ryan-321/Memory">
-        <p>Github Repo</p>
+        Github Repo
       </a>
     </div>
   </div>
@@ -52,7 +52,7 @@ permalink: /portfolio/
         </a>
       </div>
       <a href="https://github.com/Ryan-321/weatherAPI">
-        <p>Github Repo</p>
+        Github Repo
       </a>
     </div>
     <div class="project">
@@ -67,7 +67,7 @@ permalink: /portfolio/
           </div>
         </a>
       </div>
-      <p>Wordpress Site</p>
+      <p style="color: slategrey;">Wordpress Site</p>
     </div>
   </div>
 </section>
