adds new concentration project

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,4 +70,22 @@ permalink: /portfolio/
       <p style="color: slategrey;">Wordpress Site</p>
     </div>
   </div>
+  <div class='about-row'>
+    <div class="project">
+      <div class="image_wrapper">
+        <img src="/images/concentration2.0.png" alt="Concentration2.0" />
+        <a href="https://warm-dawn-43837.herokuapp.com/">
+          <div class="project_overlay">
+            <h3>React, CSS Transforms</h3>
+            <p>
+              Redo of my first Project.  Uses React to keep track of state and CSS Transforms to make the turning the pieces more interesting.  Currently not responsive.
+            </p>
+          </div>
+        </a>
+      </div>
+      <a href="https://github.com/Ryan-321/concentration">
+        Github Repo
+      </a>
+    </div>
+  </div>
 </section>
