updates new job

--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@ permalink: /resume/
         <h3>Databases:</h3>
         <aside>
           <p>
-            MySql, Postgresql
+            MySql, Firebase
           </p>
         </aside>
       </li>
@@ -24,7 +24,7 @@ permalink: /resume/
         <h3>Languages &amp; Frameworks:</h3>
         <aside>
           <p>
-            Ruby, Rails, JavaScript, React, jQuery, HTML5, CSS3, Sass, Bootstrap, SQL
+            Ruby, Rails, JavaScript, jQuery, React HTML5, CSS3, Sass, Bootstrap, SQL, Wordpress
           </p>
         </aside>
       </li>
@@ -32,7 +32,7 @@ permalink: /resume/
         <h3>Management &amp; Deployment:</h3>
         <aside>
           <p>
-            Git, GitHub, Heroku, Wordpress, CLI
+            Git, GitHub, Heroku
           </p>
         </aside>
       </li>
@@ -40,7 +40,7 @@ permalink: /resume/
         <h3>Methodologies:</h3>
         <aside>
           <p>
-            OOP, MVC, TDD, Responsive Design, UI Design, Data Analysis
+            OOP, MVC, TDD, Responsive, Agile
           </p>
         </aside>
       </li>
@@ -53,19 +53,33 @@ permalink: /resume/
   </div>
   <div class="work-experience">
     <h2>WORK EXPERIENCE</h2>
-    <ul>
+    <ul>      <li class="work-exp-li">
+            <h3>Trilogy Education Services</h3>
+            <p class="title">GWU Coding Bootcamp Teachers Assistant (part-time)&mdash; <span>May 2017&ndash;Present</span></p>
+            <ul>
+              <li>
+                Mentoring students from no coding experience till completion of course
+              </li>
+              <li>
+                One-on-one sessions with students during office hours
+              </li>
+              <li>
+                Check and grade coding homework
+              </li>
+            </ul>
+          </li>
       <li class="work-exp-li">
         <h3>Eagleforce and Associates</h3>
         <p class="title">Jr. Software Engineer &mdash; <span>May 2016&ndash;Present</span></p>
         <ul>
           <li>
-            Creating Full-Stack Applications in a Ruby on Rails Environment
+            Developed web applications in a Ruby on Rails and MySQL environment
           </li>
           <li>
-            API Integration
+            Developed a REST based API and integrated it into a suite of company developed applications
           </li>
           <li>
-            Configure and Maintain Database Schemas for Projects
+            Developed User Interfaces
           </li>
         </ul>
       </li>
@@ -127,6 +141,7 @@ permalink: /resume/
       <li class="education-li">
         <h3>Virginia Wesleyan College</h3>
         <p>B.A. Business &ndash; Concentration in Marketing, 2003</p>
+        <p>Four years on basketball team</p>
       </li>
     </ul>
   </div>
